# tr_eng

./: CMakeLists.txt  README.md  main.cpp
dictionary/: dict
include/: dictionary.h
src/: dictionary.cpp  file_process.cpp  file_process.h  parser.cpp  parser.h
